# VEVPConstitutiveModelInFiniteStrain

./: BasicOperations.py  CMakeLists.txt  ConstitutiveVEVP.py  Homogenization.py  InputFile.txt  Plot.py  README.md  SecantMFHFiniteStrain.py  Structures.py  Testing.cpp  Testing.py  VEVPFiniteStrainNS.cpp  VEVPFiniteStrainNS.h  VEVPOperations.py
